--- a/www/index.html
+++ b/www/index.html
@@ -24,8 +24,9 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/directives.js"></script>
     
-    <!-- Services -->
+    <!-- Controllers -->
     <script src="js/controllers/login.ctrl.js"></script>
     <script src="js/controllers/register.ctrl.js"></script>
     <script src="js/controllers/search.ctrl.js"></script>
@@ -35,6 +36,9 @@
 
     <!-- Services -->
     <script src="js/services/auth.service.js"></script>
+    
+    <!-- Directives -->
+    <script src="js/directives/gif.directive.js"></script>
 
 </head>
 <body ng-app="linkslap">
