Added media directive to use anywhere a url needs to be shown.

--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,7 @@
     <script src="js/controllers/login.ctrl.js"></script>
     <script src="js/controllers/register.ctrl.js"></script>
     <script src="js/controllers/search.ctrl.js"></script>
+    <script src="js/controllers/share.ctrl.js"></script>
     <script src="js/controllers/streams.ctrl.js"></script>
     <script src="js/controllers/stream.ctrl.js"></script>
     <script src="js/controllers/links.ctrl.js"></script>
@@ -39,6 +40,7 @@
     
     <!-- Directives -->
     <script src="js/directives/gif.directive.js"></script>
+    <script src="js/directives/media.directive.js"></script>
 
 </head>
 <body ng-app="linkslap">
