Added ability to launch the app via a uri. Tons of usability fixes.

--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
     <script src="js/services.js"></script>
     <script src="js/push-callbacks.js"></script>
     <script src="js/share.js"></script>
+    <script src="js/app-uri.js"></script>
 
     <!-- Controllers -->
     <script src="js/controllers/login.ctrl.js"></script>
