--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,8 @@
     <script src="lib/restangular/dist/restangular.min.js"></script>
     <script src="lib/ngstorage/ngStorage.js"></script>
     <script src="lib/img-src-ondemand/dist/img-src-ondemand.js"></script>
+    <script src="lib/moment/min/moment.min.js"></script>
+    <script src="lib/angular-moment/angular-moment.min.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
@@ -50,13 +52,14 @@
     <!-- Directives -->
     <script src="js/directives/gif.directive.js"></script>
     <script src="js/directives/media.directive.js"></script>
+    <script src="js/directives/keep-scroll.directive.js"></script>
 
 </head>
 <body ng-app="linkslap" class="platform-windows platform-cordova platform-webview">
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
-    <ion-nav-bar class="bar-positive">
+    <ion-nav-bar class="bar-light">
         <ion-nav-back-button state-nav-back-button>
         </ion-nav-back-button>
     </ion-nav-bar>
